--- a/Education.html
+++ b/Education.html
@@ -8,9 +8,11 @@
     </head>
     <body>
         <div>
-            <h1>Contact Me</h1>
-            <p>Email: ruoting_xia@kenan-flagler.unc.edu</p> 
-            <p>phone: 9842615770</p> 
+            <h1>Education</h1>
+            <p>[School] University of North Carolina at Chapel Hill</p> 
+            <p>[Major] Computer Science (B.S.) and Applied Mathematics</p> 
+            <p>[Minor] Business Administration</p> 
+            <p>[Class] 2023</p> 
             <a href="index.html">Back to Main Page</a>
         </div>
     </body>
