--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
     <head>  
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Assignment 0 test!</title>
+        <title>Assignment 1 test!</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <div>
-            <h1>Looking good!</h1>
-            <p>Go ahead and edit me.</p>
+            <h1>Ruoting Xia Profile</h1>
+            <a href="Education.html">Education</a>
+            <a href="experience.html">Experience</a>
+            <a href="contact.html">Contact Me</a>
         </div>
     </body>
 </html>
