--- a/Education.html
+++ b/Education.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>  
+<html>
+    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Assignment 1 test!</title>
@@ -9,10 +9,10 @@
     <body>
         <div>
             <h1>Education</h1>
-            <p>[School] University of North Carolina at Chapel Hill</p> 
-            <p>[Major] Computer Science (B.S.) and Applied Mathematics</p> 
-            <p>[Minor] Business Administration</p> 
-            <p>[Class] 2023</p> 
+            <p>[School] University of North Carolina at Chapel Hill</p>
+            <p>[Major] Computer Science (B.S.) and Applied Mathematics</p>
+            <p>[Minor] Business Administration</p>
+            <p>[Class] 2023</p>
             <a href="index.html">Back to Main Page</a>
         </div>
     </body>
