--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>  
+<html>
+    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Assignment 1 test!</title>
@@ -9,8 +9,8 @@
     <body>
         <div>
             <h1>Contact Me</h1>
-            <p>Email: ruoting_xia@kenan-flagler.unc.edu</p> 
-            <p>phone: 9842615770</p> 
+            <p>Email: ruoting_xia@kenan-flagler.unc.edu</p>
+            <p>phone: 9842615770</p>
             <a href="index.html">Back to Main Page</a>
         </div>
     </body>
