--- a/experience.html
+++ b/experience.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
         <div>
             <h1>Experience</h1>
             <h3>EasyPath Education</h3>
-            <p id="title1">Product Manager &amp Marketing Assistant</p>
+            <p id="title1">Product Manager and Marketing Assistant</p>
             <p>- Conducted competitive product analysis and SWOT analysis to design courses that attained a $30K+ monthly sales</p>
             <p>- Led a 5-person marketing group to promote on social media and bring in new customers to grow monthly sales by 8%</p>
             <p>- Supervised a 300-person tutor group to improve service quality, customer satisfaction rate (by 11.5%), and CLV</p>
